--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,102 @@
 body {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-  }
+  background-color: #f9ebd7;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
 
-  .container {
-    position: relative;
-    margin: auto;
-    display: block;
-    margin-top: 8%;
-    width: 600px;
-    height: 420px;
-    background: none;
-  }
+.container {
+  position: relative;
+  margin: auto;
+  display: block;
+  width: 600px;
+  height: 420px;
+  background: none;
+}
 
+.head{
+  position: absolute;
+  top: 16.5%;
+  left: 25%;
+  width: 50%;
+  height: 75%;
+  background: #fcd4a4;
+  border-radius: 50%;
+}
+
+.earLeft{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  left: -10%;
+  top: 30%;
+  background: #fcd4a4;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.earRight{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  right: -10%;
+  top: 30%;
+  background: #fcd4a4;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.innerEarLeft {
+  position: absolute;
+  border-radius: 100px 10px 10px 100px;
+  width: 40%;
+  height: 80%;
+  top: 10%;
+  left: 10%;
+  background: #f4bc7d;
+}
+
+.innerEarRight {
+  position: absolute;
+  border-radius: 10px 100px 100px 10px;
+  width: 40%;
+  height: 80%;
+  top: 10%;
+  right: 10%;
+  background: #f4bc7d;
+}
+
+.eyeLeft {
+  position: absolute;
+  background: #5f86c4;
+  width: 10%;
+  height: 13%;
+  top: 30%;
+  left: 28%;
+  border-radius: 50%;
+  z-index: 3;
+}
+
+.eyeRight {
+  position: absolute;
+  background: #5f86c4;
+  width: 10%;
+  height: 13%;
+  top: 30%;
+  right: 28%;
+  border-radius: 50%;
+  z-index: 3;
+}
+
+.pupil{
+  position: absolute;
+  width: 30%;
+  height: 24%;
+  top: 25%;
+  right: 18%;
+  border-radius: 50%;
+  background: #fff7f0;
+}
   
