--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   top: 16.5%;
   left: 25%;
   width: 50%;
-  height: 72%;
+  height: 68%;
   background: #fcd4a4;
   border-radius: 50%;
   z-index: 2;
@@ -77,7 +77,7 @@ body {
   width: 10%;
   height: 13%;
   top: 38%;
-  left: 28%;
+  left: 25%;
   border-radius: 50%;
   z-index: 2;
 }
@@ -88,7 +88,7 @@ body {
   width: 10%;
   height: 13%;
   top: 38%;
-  right: 28%;
+  right: 25%;
   border-radius: 50%;
   z-index: 2;
 }
@@ -98,7 +98,7 @@ body {
   width: 30%;
   height: 24%;
   top: 25%;
-  right: 18%;
+  right: 20%;
   border-radius: 50%;
   background: #fff7f0;
   z-index: 2;
@@ -107,10 +107,10 @@ body {
 .nose {
   position: absolute;
   background: #f4bc7d;
-  width: 8%;
+  width: 7%;
   height: 10%;
-  left: 46%;
-  top: 50%;
+  left: 47%;
+  top: 52%;
   border-radius: 40px;
   z-index: 2;
 }
@@ -119,7 +119,7 @@ body {
   position: absolute;
   width: 25%;
   height: 12%;
-  top: 65%;
+  top: 67%;
   left: 38%;
   background-color: #efaf9e;
   border-radius: 20px 20px 180px 180px;
@@ -143,7 +143,7 @@ body {
   width: 64%;
   height: 40%;
   left: 35%;
-  top: -2%;
+  top: -6%;
   background-color: #dda862;
   border-radius: 0 90%;
   z-index: 2;
@@ -154,9 +154,41 @@ body {
   width: 54%;
   height: 110%;
   left: 23%;
-  top: 10%;
+  top: 8%;
   background-color: #dda862;
   border-radius: 150px;
   z-index: 1;
+}
+
+.glassesLeft {
+  position: absolute;
+  border: 5px solid #7c6d60;
+  width: 31%;
+  height: 25%;
+  top: 30%;
+  left: 12%;
+  border-radius: 20px 50px 50px 50px;
+  z-index: 3;
+}
+
+.glassesRight {
+  position: absolute;
+  border: 5px solid #7c6d60;
+  width: 31%;
+  height: 25%;
+  top: 30%;
+  right: 12%;
+  border-radius: 50px 20px 50px 50px;
+  z-index: 3;
+}
+
+.glassesMiddle {
+  position: absolute;
+  border-bottom: 5px solid #7c6d60;
+  width: 8%;
+  height: 10%;
+  top: 34%;
+  right: 46%;
+  z-index: 3;
 }
   
