--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,11 @@ body {
   margin: auto;
   display: block;
   width: 600px;
-  height: 420px;
+  height: 600px;
   background: none;
+  background-color: #fff7f0;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .head{
@@ -21,10 +24,10 @@ body {
   top: 16.5%;
   left: 25%;
   width: 50%;
-  height: 68%;
+  height: 50%;
   background: #fcd4a4;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .earLeft{
@@ -35,7 +38,7 @@ body {
   top: 38%;
   background: #fcd4a4;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .earRight{
@@ -46,7 +49,7 @@ body {
   top: 38%;
   background: #fcd4a4;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .innerEarLeft {
@@ -57,7 +60,7 @@ body {
   top: 10%;
   left: 10%;
   background: #f4bc7d;
-  z-index: 2;
+  z-index: 4;
 }
 
 .innerEarRight {
@@ -68,7 +71,7 @@ body {
   top: 10%;
   right: 10%;
   background: #f4bc7d;
-  z-index: 2;
+  z-index: 4;
 }
 
 .eyeLeft {
@@ -79,7 +82,7 @@ body {
   top: 38%;
   left: 25%;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .eyeRight {
@@ -90,7 +93,7 @@ body {
   top: 38%;
   right: 25%;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .pupil{
@@ -101,7 +104,7 @@ body {
   right: 20%;
   border-radius: 50%;
   background: #fff7f0;
-  z-index: 2;
+  z-index: 4;
 }
 
 .nose {
@@ -112,7 +115,7 @@ body {
   left: 47%;
   top: 52%;
   border-radius: 40px;
-  z-index: 2;
+  z-index: 4;
 }
 
 .mouth {
@@ -122,9 +125,9 @@ body {
   top: 67%;
   left: 38%;
   background-color: #efaf9e;
-  border-radius: 20px 20px 180px 180px;
+  border-radius: 30px 30px 180px 180px;
   overflow: hidden;
-  z-index: 2;
+  z-index: 4;
 }
 
 .teeth {
@@ -135,7 +138,7 @@ body {
   top: -30%;
   background-color: #fff7f0;
   border-radius: 50%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .hairFront {
@@ -146,18 +149,19 @@ body {
   top: -6%;
   background-color: #dda862;
   border-radius: 0 90%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .hairBack {
   position: absolute;
   width: 54%;
-  height: 110%;
+  height: 70%;
   left: 23%;
-  top: 8%;
+  top: 10%;
   background-color: #dda862;
   border-radius: 150px;
   z-index: 1;
+  box-shadow:inset -10px -10px 0px #c49358;
 }
 
 .glassesLeft {
@@ -168,7 +172,7 @@ body {
   top: 30%;
   left: 12%;
   border-radius: 20px 50px 50px 50px;
-  z-index: 3;
+  z-index: 4;
 }
 
 .glassesRight {
@@ -179,7 +183,7 @@ body {
   top: 30%;
   right: 12%;
   border-radius: 50px 20px 50px 50px;
-  z-index: 3;
+  z-index: 4;
 }
 
 .glassesMiddle {
@@ -189,6 +193,40 @@ body {
   height: 10%;
   top: 34%;
   right: 46%;
+  z-index: 4;
+}
+
+.neck {
+  position: absolute;
+  width: 13%;
+  height: 15%;
+  left: 43%;
+  top: 59%;
+  background-color: #fcd4a4;
+  border-radius: 35px;
   z-index: 3;
+}
+
+.neckShadow {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  left: 0%;
+  top: 14%;
+  background-color: #f4bc7d;
+  border-radius: 50%;
+  z-index: 3;
+}
+
+.body {
+  position: absolute;
+  width: 54%;
+  height: 40%;
+  left: 23%;
+  top: 68%;
+  background-color: #c9a277;
+  border-radius: 150px 150px 20px 20px;
+  z-index: 2;
+  overflow: hidden;
 }
   
