--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   overflow: hidden;
 }
 
-.head{
+.head {
   position: absolute;
   top: 16.5%;
   left: 25%;
@@ -28,6 +28,7 @@ body {
   background: #fcd4a4;
   border-radius: 50%;
   z-index: 4;
+  animation: bouncing 2s linear infinite;
 }
 
 .earLeft{
@@ -105,6 +106,7 @@ body {
   border-radius: 50%;
   background: #fff7f0;
   z-index: 4;
+  animation: glance 4s linear infinite;
 }
 
 .nose {
@@ -128,6 +130,7 @@ body {
   border-radius: 30px 30px 180px 180px;
   overflow: hidden;
   z-index: 4;
+  animation: close 2s linear infinite;
 }
 
 .teeth {
@@ -184,6 +187,7 @@ body {
   border-radius: 150px;
   z-index: 1;
   box-shadow:inset -10px -10px 0px #c49358;
+  animation: grow 2s linear infinite;
 }
 
 .glassesLeft {
@@ -196,6 +200,7 @@ body {
   border-radius: 40px 100px 100px 100px;
   z-index: 5;
   overflow: hidden;
+  animation: slide 2s linear infinite;
 }
 
 .reflectionLeft { 
@@ -232,6 +237,7 @@ body {
   border-radius: 100px 40px 100px 100px;
   z-index: 5;
   overflow: hidden;
+  animation: slide 2s linear infinite;
 }
 
 .reflectionRight { 
@@ -266,6 +272,7 @@ body {
   top: 36%;
   right: 46%;
   z-index: 4;
+  animation: slide 2s linear infinite;
 }
 
 .neck {
@@ -277,6 +284,7 @@ body {
   background-color: #fcd4a4;
   border-radius: 35px;
   z-index: 3;
+  animation: bouncing 2s linear infinite;
 }
 
 .neckShadow {
@@ -300,5 +308,41 @@ body {
   border-radius: 150px 150px 20px 20px;
   z-index: 2;
   overflow: hidden;
+  animation: bouncing 2s linear infinite;
 }
-  
+
+@keyframes bouncing {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(8px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes close {
+  0% {height: 12%;}
+  50% {height: 1%; border-radius: 50%;}
+  100% {height: 12%;}
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(4px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes grow {
+  0% {height: 70%;}
+  50% {height: 75%;}
+  100% {height: 70%;}
+}
